[gd_scene load_steps=5 format=3 uid="uid://cicej1be3pheu"]

[ext_resource type="Script" path="res://minigames/raheem_battle/ui/mouse_control/mouse_control.gd" id="1_fp7mi"]

[sub_resource type="Animation" id="Animation_f8rx8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FinalPos:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1153, 214)]
}

[sub_resource type="Animation" id="Animation_hqksi"]
resource_name = "poo"
length = 3.0
loop_mode = 2
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FinalPos:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.291667, 0.416667, 0.666667, 0.958333, 1.16667, 1.41667, 1.70833, 2.04167, 2.25, 2.375, 2.625, 2.91667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1153, 214), Vector2(652, 348), Vector2(652, 106), Vector2(399, 505), Vector2(950, 560), Vector2(1198, 346), Vector2(307, 419), Vector2(369, 189), Vector2(71, 631), Vector2(1162, 451), Vector2(64, 118), Vector2(597, 344), Vector2(1258, 39)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1acnr"]
_data = {
"RESET": SubResource("Animation_f8rx8"),
"poo": SubResource("Animation_hqksi")
}

[node name="mouse_control" type="Node2D"]
script = ExtResource("1_fp7mi")

[node name="FinalPos" type="Marker2D" parent="."]
position = Vector2(1153, 214)

[node name="change_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1acnr")
}

[connection signal="timeout" from="change_timer" to="." method="_on_change_timer_timeout"]
